made header fixed visible

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -5,88 +5,109 @@
   width       : $max-width;
   margin-left : auto;
   margin-right: auto;
-  padding     : $spacing-unit 0;
+  padding     : $spacing-unit*2.5 0;
 }
 
 /**
  * Site header
  */
 .site-header {
-  width        : $max-width;
-  margin-left  : auto;
-  margin-right : auto;
-  border-top   : 5px solid $brand-color-dark;
-  border-bottom: 1px solid $brand-color-light;
-  min-height   : $spacing-unit * 1.865;
-  line-height  : $base-line-height * $base-font-size * 2.25;
+  z-index         : 1;
+  background-color: $background-color;
+  overflow        : hidden;
+  position        : fixed;
+  top             : 0;
+  width           : $max-width;
+  align-self      : center;
+  border-top      : 5px solid $brand-color-dark;
+  border-bottom   : 1px solid $brand-color-light;
+  min-height      : $spacing-unit * 1.865;
+  line-height     : $base-line-height * $base-font-size * 2.25;
 }
 
-.site-title {
-  @include relative-font-size(1.625);
-  font-weight   : 300;
-  letter-spacing: -1px;
-  margin-bottom : 0;
-  float         : left;
-  padding       : 0.2em;
-}
+// .site-title {
+//   @include relative-font-size(1.625);
+//   font-weight   : 300;
+//   letter-spacing: -1px;
+//   margin-bottom : 0;
+//   float         : left;
+//   padding       : 0.2em;
+// }
 
 .site-nav {
-  position           : relative;
-  float              : right;
-  background-color   : $background-color;
-  border             : none;
-  text-align         : right;
-  padding            : 0.2em;
+  list-style-type : none;
+  margin          : 0;
+  padding         : 0;
+  width           : 100%;
+  background-color: $background-color;
+  border          : none;
+  text-align      : left;
 
-  .nav-trigger {
-    display: none;
+  li {
+    float: left;
   }
 
-  .menu-icon {
-    float      : right;
-    width      : 36px;
-    height     : 26px;
-    line-height: 0;
-    padding-top: 10px;
-    text-align : center;
-
-    >svg path {
-      fill: $brand-color-dark;
-    }
-  }
-
-  label[for="nav-trigger"] {
-    display: block;
-    float  : right;
-    width  : 36px;
-    height : 36px;
-    z-index: 2;
-    cursor : pointer;
-  }
-
-  input~.trigger {
-    clear  : both;
-    display: none;
-  }
-
-  input:checked~.trigger {
-    display       : block;
-    padding-bottom: 5px;
-  }
-
-  .page-link {
+  li a {
     color      : $text-color;
     line-height: $base-line-height;
     display    : inline;
-    padding    : 0;
-
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-
-    margin-left: auto;
+    text-align : center;
+    padding    : 0.5em 1em;
   }
+
+  .active {
+    background-color: $that-orange;
+  }
+
+  // .nav-trigger {
+  //   display: none;
+  // }
+
+  // .menu-icon {
+  //   float      : right;
+  //   width      : 36px;
+  //   height     : 26px;
+  //   line-height: 0;
+  //   padding-top: 10px;
+  //   text-align : center;
+
+  //   >svg path {
+  //     fill: $brand-color-dark;
+  //   }
+  // }
+
+  // label[for="nav-trigger"] {
+  //   display: block;
+  //   float  : right;
+  //   width  : 36px;
+  //   height : 36px;
+  //   z-index: 2;
+  //   cursor : pointer;
+  // }
+
+  // input~.trigger {
+  //   clear  : both;
+  //   display: none;
+  // }
+
+  // input:checked~.trigger {
+  //   display       : block;
+  //   padding-bottom: 5px;
+  // }
+
+  // .page-link {
+  //   color      : $text-color;
+  //   line-height: $base-line-height;
+  //   display    : inline;
+  //   padding    : 0;
+
+  //   // Gaps between nav items, but not on the last one
+  //   &:not(:first-child) {
+  //     margin-left: 20px;
+  //   }
+
+  //   margin-right: auto;
+  // }
 }
 
 
@@ -94,11 +115,11 @@
  * Site footer
  */
 .site-footer {
-  width        : $max-width;
-  margin-left  : auto;
-  margin-right : auto;
-  border-top: 1px solid $brand-color-light;
-  padding   : $spacing-unit/2 0;
+  width       : $max-width;
+  margin-left : auto;
+  margin-right: auto;
+  border-top  : 1px solid $brand-color-light;
+  padding     : $spacing-unit/2 0;
 }
 
 // .footer-heading {
@@ -118,7 +139,7 @@
 
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
-  color: $brand-color;
+  color  : $brand-color;
   padding: 0.2em;
 }
 
